[package]
name = "yuvxyb"
description = "Conversions between YUV (YCbCr), XYB, and other colorspaces"
version = "0.3.1"
edition = "2021"
license = "MIT"
rust-version = "1.61.0"
documentation = "https://docs.rs/yuvxyb"
homepage = "https://github.com/rust-av/yuvxyb"
repository = "https://github.com/rust-av/yuvxyb"
exclude = ["test_data", "yuvxyb-dump"]

[features]
default = ["fastmath"]
fastmath = []
build-acctest = ["image", "plotters"]

[dependencies]
av-data = "0.4.1"
log = "0.4.17"
nalgebra = "0.32.2"
num-traits = "0.2.15"
paste = "1.0.9"
thiserror = "1.0.40"
v_frame = "0.3.0"

# acctest dependencies
image = { version = "0.24.5", optional = true }
plotters = { version = "0.3.1", optional = true }

[dev-dependencies]
criterion = "0.4.0"
image = "0.24.5"
interpolate_name = "0.2.3"
rand = "0.8.5"

[[bench]]
name = "benches"
harness = false

[[bin]]
name = "acctest"
required-features = ["build-acctest"]
