[package]
name = "yuvxyb-math"
description = "Math abstractions for yuvxyb"
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/yuvxyb-math"
homepage = "https://github.com/rust-av/yuvxyb"
repository = "https://github.com/rust-av/yuvxyb"

rust-version = "1.64.0"

[features]
default = ["fastmath"]
fastmath = []
simd = ["wide"]

[dependencies]
wide = { version = "1.1", optional = true }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "cbrtf_bench"
harness = false