[package]
name = "yuvxyb-math"
description = "Math abstractions for yuvxyb"
version = "0.1.0"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/yuvxyb-math"
homepage = "https://github.com/rust-av/yuvxyb"
repository = "https://github.com/rust-av/yuvxyb"

rust-version = "1.85.0"

[features]
default = ["fastmath"]
fastmath = []
