[package]
name = "yuvxyb"
description = "Conversions between YUV (YCbCr), XYB, and other colorspaces"
version = "0.4.2"
edition = "2024"
license = "MIT"
documentation = "https://docs.rs/yuvxyb"
homepage = "https://github.com/rust-av/yuvxyb"
repository = "https://github.com/rust-av/yuvxyb"
exclude = ["test_data", "yuvxyb-dump"]

rust-version = "1.85.0"

[features]
default = ["fastmath"]
fastmath = ["yuvxyb-math/fastmath"]

[dependencies]
yuvxyb-math = { version = "0.1.0", path = "../yuvxyb-math" }
av-data = "0.4.2"
log = "0.4.17"
num-traits = "0.2.15"
v_frame = "0.3.8"

[dev-dependencies]
criterion = { version = "0.7", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }
interpolate_name = "0.2.3"
rand = "0.9.1"

[[bench]]
name = "benches"
harness = false
